--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,8 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to 'ブックマーク一覧', '#', class: 'nav-link' %>
+          <%= link_to t('boards.bookmarks.title'), bookmarks_boards_path, class: 'nav-link' %>
+        </li>
         </li>
 
         <li class="nav-item dropdown dropdown-slide">
