--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -24,6 +24,8 @@
            <p><%= t('.no_result') %></p>
          <% end %>
        </div>
+      <!-- ページネーション -->
+      <%= paginate @boards %>
      </div>
    </div>
  </div>
