--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container pt-5">
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
-      <h1><%= t('.title') %></h1>
+      <h2 class="d-inline"><%= @board.title %></h2>
       <!-- 掲示板内容 -->
       <article class="card">
         <div class="card-body">
@@ -11,15 +11,14 @@
               <%= image_tag @board.board_image.url, class: 'card-img-top img-fluid', size: '300x200' %>
             </div>
             <div class='col-md-9'>
-              <h3 class="d-inline"><%= @board.title %></h3>
               <%= render 'crud_menus', board: @board if current_user.own?(@board) %>
-              <ul class="list-inline">
-                <li class="list-inline-item">by <%= @board.user.decorate.full_name %></li>
-                <li class="list-inline-item"><%= l @board.created_at, format: :long  %></li>
-              </ul>
+              <h5 class="mt-3 border-bottom pb-1">レビューアー</h5>
+              <p class="card-j"><%= @board.user.decorate.full_name %></p>
+              <h5 class="mt-3 border-bottom pb-1">レビュー内容</h5>
+              <p class="card-j"><%= simple_format @board.body %></p>
+              <p class="card-tejxt mb-2"><small class="text-muted"><%= l @board.created_at, format: :long %></small></p>
             </div>
           </div>
-          <p><%= simple_format(@board.body) %></p>
         </div>
       </article>
     </div>
