--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -3,6 +3,8 @@
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
       <h2 class="d-inline"><%= @board.title %></h2>
+      <p><%= "#{@board.authors.pluck(:name).join(', ')} (著)" unless @board.authors.pluck(:name).blank? %></p>
+      <p><small class="text-muted"><%= "発売日: #{@board.published_date}" unless @board.published_date.blank? %></small></p>
       <!-- 掲示板内容 -->
       <article class="card">
         <div class="card-body">
