--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,10 +5,12 @@
       <h1 class="float-left mb-5"><%= t('.title') %></h1>
       <%= link_to t('defaults.edit'), edit_profile_path, class: 'btn btn-success float-right' %>
       <table class="table">
+      <% if current_user.role != 'guest' %>
         <tr>
           <th scope="row"><%= t(User.human_attribute_name(:email)) %></th>
           <td><%= current_user.email %></td>
         </tr>
+      <% end %>
         <tr>
           <th scope="row"><%= t(User.human_attribute_name(:full_name)) %></th>
           <td><%= current_user.decorate.full_name %></td>
