--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,8 +1,10 @@
 .top-wrapper {
   background-image: image-url("top.jpg");
-  height: calc(100vh - 134px);
+  // height: calc(100vh - 134px);
   position: relative;
   background-position: center;
+  width: auto;
+  height: 500px;
 
   .top-inner-text {
     position: absolute;
@@ -12,10 +14,27 @@
     width: 100%;
     text-align: center;
     font-size: 3rem;
-    color: white;
+    color: black;
+    background-color: silver;
+    opacity: 0.8;
 
-    @media screen and (max-width: 767px) {
-      font-size: 2.0rem;
-    }
+    // @media screen and (max-width: 767px) {
+    //   font-size: 2.0rem;
+    // }
   }
+}
+
+.top-image {
+  position: relative;
+  background-position: center;
+  width: auto;
+  height: 450px;
+}
+
+.top-picture {
+  text-align: center;
+}
+
+.top-picture2 {
+  text-align: center;
 }
