--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -13,14 +13,13 @@
     transform: translate(-50%, -50%);
     width: 100%;
     text-align: center;
-    font-size: 3rem;
     color: black;
     background-color: silver;
     opacity: 0.8;
 
-    // @media screen and (max-width: 767px) {
-    //   font-size: 2.0rem;
-    // }
+    @media screen and (max-width: 767px) {
+       font-size: 2.0rem;
+     }
   }
 }
 
@@ -33,6 +32,7 @@
 
 .top-picture {
   text-align: center;
+  font-size: 3rem;
 }
 
 .top-picture2 {
