--- a/app/views/boards/_before_login.html.erb
+++ b/app/views/boards/_before_login.html.erb
@@ -1,7 +1,7 @@
 <div class='top-wrapper'>
   <div class='top-inner-text'>
     <h1>picture book</h1>
-    <%= link_to '新規登録 or ログイン', login_path ,class: 'btn btn-warning w-100 '  %>
+    <h1><%= link_to '新規登録 or ログイン', login_path ,class: 'btn btn-warning w-100 ' %>
     <%= button_to 'ゲストログイン', guest_login_path, class: 'btn btn-warning w-100 ' %>
   </div>
 </div>
