--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -5,6 +5,7 @@
   background-position: center;
   width: auto;
   height: 500px;
+  padding: 10px 20px;  
 
   .top-inner-text {
     position: absolute;
@@ -16,10 +17,11 @@
     color: black;
     background-color: silver;
     opacity: 0.8;
+    font-size: 80%;
 
-    @media screen and (max-width: 767px) {
-       font-size: 2.0rem;
-     }
+  //   @media screen and (max-width: 767px) {
+  //      font-size: 2.0rem;
+  //    }
   }
 }
 
