--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,24 +1,27 @@
-<div class="col-sm-12 col-lg-4 mb-3">
-  <div id="board-id-<%= board.id %>">
-    <div class="card">
-      <%= image_tag board.board_image.url, class: 'card-img-top', size: '300x200' %>
+<div class="card mb-3", style="height: 350px; min-width: 300px;">
+  <div class="row g-0", style="height: 220px">
+    <div class="col-5">
+      <%= image_tag board.board_image.url, class: 'img-fluid ms-2 mt-2 border board-img' %>
+    </div>
+    <div class="col-7">
       <div class="card-body">
-        <h4 class="card-title">
-          <%= link_to board.title, board_path(board) %>
-        </h4>
-        <p class="card-text mb-2"><%= board.authors.pluck(:name).join(', ')&.truncate(20) %></p>    
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <%= icon 'far', 'user' %>
-            <%= board.user.decorate.full_name %>
-          </li>
-          <li class="list-inline-item">
-            <%= icon 'far', 'calendar' %>
-            <%= l board.created_at, format: :long %>
-          </li>
-        </ul>
-        <p class="card-text"><%= board.body %></p>
+        <h5 class="card-title"><%= board.title.truncate(30) %></h5>
+        <p class="card-text mb-2"><%= board.authors.pluck(:name).join(', ')&.truncate(20) %></p>
+        <p class="card-text"><small class="text-muted"><%= board.published_date %></small></p>
       </div>
     </div>
   </div>
+  <div class="d-flex border-top pt-2">
+    <div>
+      <%= image_tag board.user.avatar.url, class: 'rounded-circle mt-1 ms-2 me-3', size: '40x40' %>
+    </div>
+    <div>
+      <p class="fs-7 mb-1"><%= board.user.decorate.full_name %></p>
+      <p class="card-text mb-2">
+        <small class="text-muted"><%= board.created_at %></small>
+      </p>
+    </div>
+  </div>
+  <p class="card-text mx-3"><%= board.body.truncate(30) %></p>
+  <%= link_to '', board_path(board), class: 'card-link' %>
 </div>
