--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,32 +1,22 @@
 <% content_for(:title, t('.title')) %>
-<div class="container pt-3">
+<div class="container-lg pt-3">
+  <% if logged_in? %>
+    <!-- 検索フォーム -->
+    <%= render 'search_form', url: boards_path %>
+  <% else %>
+    <%= render 'before_login' %>
+  <% end %>
+</div> 
 
-      <% if logged_in? %>
-    <div class="row">
-     <div class="col-lg-10 offset-lg-1">
-       <!-- 検索フォーム -->
-      <%= render 'search_form', url: boards_path %>
-     </div>
-   </div>
-      <% else %>
-      <%= render 'before_login' %>
-      <% end %>
-
-<p>
-
- 
-   <!-- 掲示板一覧 -->
-   <div class="row">
-     <div class="col-12">
-       <div class="row">
-         <% if @boards.present? %>
-           <%= render @boards %>
-         <% else %>
-           <p><%= t('.no_result') %></p>
-         <% end %>
-       </div>
-      <!-- ページネーション -->
-      <%= paginate @boards %>
-     </div>
-   </div>
+<!-- 掲示板一覧 -->
+<div class="col-12">
+  <div class="row">
+    <% if @boards.present? %>
+      <%= render @boards %>
+    <% else %>
+      <p><%= t('.no_result') %></p>
+    <% end %>
+    <!-- ページネーション -->
+    <%= paginate @boards %>
+  </div>
 </div>
