--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,5 +1,5 @@
-<div class="card mb-3", style="height: 350px; min-width: 300px;">
-  <div class="row g-0", style="height: 220px">
+<div class="card mb-3">
+  <div class="row g-0">
     <div class="col-5">
       <%= image_tag board.board_image.url, class: 'img-fluid ms-2 mt-2 border board-img' %>
     </div>
@@ -11,10 +11,9 @@
       </div>
     </div>
   </div>
+
   <div class="d-flex border-top pt-2">
-    <div>
-      <%= image_tag board.user.avatar.url, class: 'rounded-circle mt-1 ms-2 me-3', size: '40x40' %>
-    </div>
+    <div><%= image_tag board.user.avatar.url, class: 'rounded-circle mt-1 ms-2 me-3', size: '40x40' %></div>
     <div>
       <p class="fs-7 mb-1"><%= board.user.decorate.full_name %></p>
       <p class="card-text mb-2">
@@ -22,6 +21,7 @@
       </p>
     </div>
   </div>
+
   <p class="card-text mx-3"><%= board.body.truncate(30) %></p>
   <%= link_to '', board_path(board), class: 'card-link' %>
 </div>
