--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -8,15 +8,12 @@
   </div>
 
   <!-- 掲示板一覧 -->
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
+    <div class="col-sm-12">
         <% if @bookmark_boards.present? %>
           <%= render @bookmark_boards %>
         <% else %>
           <p><%= t('.no_result') %></p>
         <% end %>
-      </div>
       <!-- ページネーション -->
       <%= paginate @bookmark_boards %>
     </div>
