--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,20 +10,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto main-nav align-items-center">
-        <li class="nav-item dropdown dropdown-slide">
-          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= Board.model_name.human %>
-          </a>
 
-          <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to t('boards.index.title'), boards_path, class: 'dropdown-item' %>
-            <%= link_to t('boards.new.title'), search_boards_path, class: 'dropdown-item' %>
-          </div>
-        </li>
-
-        <li class="nav-item">
-          <%= link_to t('boards.bookmarks.title'), bookmarks_boards_path, class: 'nav-link' %>
-        </li>
+      <h3><%= link_to '本をレビューする', search_boards_path, class: 'btn btn-warning btn-lg' %></h3>　　
+      <h3><%= link_to t('boards.bookmarks.title'), bookmarks_boards_path, class: 'btn btn-warning btn-lg' %></h3>
 
         <li class="nav-item dropdown dropdown-slide">
           <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="header-profile">
