--- a/app/views/boards/search.html.erb
+++ b/app/views/boards/search.html.erb
@@ -5,7 +5,7 @@
       <!-- 検索フォーム -->
       <%= form_with url: search_boards_path, local: true, method: :get do |f| %>
         <div class="mb-3">
-          <p class="fw-bolder">レビューする本を検索してください</p>
+          <p class="fw-bolder">レビューする絵本を検索してください</p>
           <%= f.search_field :search, class: "form-control", placeholder: '検索', value: params[:search] %>
           <p class=""><small class="text-secondary">書名・著者等で検索することができます。</small></p>
         </div>
