--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto main-nav align-items-center">
 
-      <h3><%= link_to '本をレビューする', search_boards_path, class: 'btn btn-warning btn-lg' %></h3>　　
+      <h3><%= link_to '絵本をレビューする', search_boards_path, class: 'btn btn-warning btn-lg' %></h3>　　
       <h3><%= link_to t('boards.bookmarks.title'), bookmarks_boards_path, class: 'btn btn-warning btn-lg' %></h3>
 
         <li class="nav-item dropdown dropdown-slide">
