--- a/app/views/boards/_before_login.html.erb
+++ b/app/views/boards/_before_login.html.erb
@@ -6,7 +6,8 @@
   </div>
 </div>
 
-<p><div class='top-picture'>what's picture book？</div></p>
-<div class='top-picture2'>お気に入りの絵本を投稿して共有しよう！</div>
-  <%= image_tag 'what2.png', class: "top-image" %>
+<p><div class='top-picture'>picture bookとは？</div></p>
+<div class='top-picture2'>お気に入りの絵本を投稿して共有するアプリです</div>
+<div class='top-picture2'>ログインすると投稿できます！</div>
+<p><div class='top-picture3'>投稿一覧</div></p>
 
