--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -8,11 +8,11 @@
         <%= f.label :email %>
         <%= f.email_field :email, class: 'form-control mb-3' %>
 
-        <%= f.label :last_name %>
-        <%= f.text_field :last_name, class: 'form-control mb-3' %>
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control mb-3' %>
 
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name, class: 'form-control mb-3' %>
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control mb-3' %>
 
         <%= f.label :avatar %>
         <%= f.file_field :avatar, onchange: 'previewFileWithId(preview)', class: 'form-control mb-3', accept: 'image/*' %>
