--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -22,7 +22,7 @@
               <div>
                 <%= link_to profile_path(@board.user), class: 'd-md-inline-flex align-items-center hover-decoration' do %>
                     <%= image_tag @board.user.avatar.url, class: 'rounded-circle ms-3 ms-md-1 me-3 mb-2', size: '50x50' %>
-                    <p class="fs-5 pt-2"><%= @board.user.decorate.full_name %></p>
+                    <p class="fs-5 pt-2"><%= @board.user.name %></p>
                 <% end %>
               </div>
               <h5 class="mt-3 border-bottom pb-1">レビュー内容</h5>
