--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
             <%= image_tag current_user.avatar_url, size: '40x40', class: 'rounded-circle mr15'%>
           </a>
           <div class="dropdown-menu dropdown-menu-right">
-            <div class="dropdown-item"><%= current_user.decorate.full_name %></div>
+            <div class="dropdown-item"><%= current_user.name %></div>
             <div class="dropdown-divider"></div>
             <%= link_to (t 'profiles.show.title'), profile_path, class: 'dropdown-item' %>
             <%= link_to (t 'defaults.logout'), logout_path, class: 'dropdown-item', method: :delete %>
