--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,12 +6,8 @@
       <%= form_with model: @user, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
         <div class="form-group">
-          <%= f.label :last_name %>
-          <%= f.text_field :last_name, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :first_name %>
-          <%= f.text_field :first_name, class: 'form-control' %>
+          <%= f.label :name %>
+          <%= f.text_field :name, class: 'form-control' %>
         </div>
         <div class="form-group">
           <%= f.label :email %>
@@ -27,8 +23,6 @@
         </div>
         <%= f.submit (t '.title'), class: 'btn btn-primary' %>
       <% end %>
-      <div class='text-center'>
-        <%= link_to (t '.to_login_page'), login_path %>
       </div>
     </div>
   </div>
