--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,7 +12,7 @@
         </tr>
       <% end %>
         <tr>
-          <th scope="row"><%= t(User.human_attribute_name(:full_name)) %></th>
+          <th scope="row"><%= t(User.human_attribute_name(:name)) %></th>
           <td><%= current_user.name %></td>
         </tr>
         <tr>
